# fire-alarm-service

./: .gitignore  Cargo.toml  example.env  incidents.json  index.html
examples/: wmata.rs
src/: lib.rs  main.rs
src/database/: line_station.rs  mod.rs  prelude.rs  rail_line.rs  station.rs  user.rs  user_station.rs
