[package]
name = "fire-alarm-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.2"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
lettre = { version = "0.11.19", features = ["tokio1-native-tls", "serde"] }
log = { version = "0.4.29", optional = true }
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
env = ["clap/env"]
log = ["dep:clap-verbosity-flag", "dep:env_logger", "dep:log"]
